fix main page line-height and vertical shift problem

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -5,6 +5,15 @@ $introduction_height: 550px;
     margin-top: 45px;
   }
 
+  .row {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  .content p {
+    line-height: 1.8;
+  }
+
   .introduction {
     width: 100%;
     font-family: "Gotham SSm A";
@@ -61,9 +70,10 @@ $introduction_height: 550px;
     }
 
     .content {
-      padding-top: 6em;
-      padding-left: 12em;
-      padding-right: 5em;
+      padding-top: 5%;
+      padding-left: 5%;
+      padding-right: 10%;
+      padding-bottom: 5%;
     }
 
   }
@@ -74,15 +84,15 @@ $introduction_height: 550px;
     background-color: #CD2348;
     margin-top: 45px;
 
-
     img, .content {
       padding: 0;
     }
 
     .content {
-      padding-top: 6em;
-      padding-left: 12em;
-      padding-right: 5em;
+      padding-top: 5%;
+      padding-left: 10%;
+      padding-right: 5%;
+      padding-bottom: 5%;
     }
 
   }
